<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    tools:context=".QuizActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:background="@color/forback"
        android:textStyle="bold"
        android:padding="16dp"
        android:textSize="24dp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Rene Magritte"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:id="@+id/ans12"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Frida kahlo"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:onClick="pluspoint"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Gustav Klimt"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/forback"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/question2"
        android:textSize="24dp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
      <TextView
          android:id="@+id/ans21"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:textSize="20dp"
          android:onClick="pluspoint"
          android:text="Miles Davis"
          android:textColor="@color/RebeccaPurple"></TextView>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:textSize="20dp"
          android:text="Dizzy Gillespie"
          android:textColor="@color/RebeccaPurple"></TextView>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:textSize="20dp"
          android:text="Franz Kafka"
          android:textColor="@color/RebeccaPurple"></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/forback"
        android:textStyle="bold"
        android:padding="16dp"
        android:text="@string/question3"
        android:textSize="24dp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="February"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="none"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:id="@+id/ans33"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="All months have 28 days"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:onClick="pluspoint"
          android:layout_margin="8dp"></TextView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/forback"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/question4"
        android:textSize="24dp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Monterey"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:id="@+id/ans42"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Montevideo"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:onClick="pluspoint"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="New uruguay"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:background="@color/forback"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/question5"
        android:textSize="24dp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Charles Edison"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Nikola Tesla"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:id="@+id/ans53"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Tomas Edison"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:onClick="pluspoint"
          android:layout_margin="8dp"></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/forback"
        android:padding="16dp"
        android:textStyle="bold"
        android:text="@string/question6"
        android:textSize="24dp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:text="Nikoloz Baratashvili"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:id="@+id/ans62"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Galaktion Tabidze"
          android:textColor="@color/RebeccaPurple"
          android:onClick="pluspoint"
          android:textSize="20dp"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Terenti Graneli"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/forback"
        android:textStyle="bold"
        android:padding="18dp"
        android:text="@string/question7"
        android:textSize="24dp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:text="Cairo"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Marrakesh"
          android:textColor="@color/RebeccaPurple"
          android:textSize="20dp"
          android:layout_margin="8dp"></TextView>
      <TextView
          android:id="@+id/ans73"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Dallol"
          android:onClick="pluspoint"
          android:textSize="20dp"
          android:textColor="@color/RebeccaPurple"
          android:layout_margin="8dp"></TextView>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showAnswer"
        android:text="Show Answer"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="@color/greenforbutton"
        android:textColor="@color/white"></Button>

  </LinearLayout>

</ScrollView>